<resources>
    <string name="app_name">My First App</string>

    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_title">Simple Dialog</string>
    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
    <string name="activity_b_label">Activity B</string>
    <string name="activity_c_label">Activity C</string>
    <string name="btn_start_a_label">Start A</string>
    <string name="btn_start_b_label">Start B</string>
    <string name="btn_start_c_label">Start C</string>
    <string name="btn_start_dialog_label">Dialog</string>
    <string name="btn_finish_a_label">Finish A</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_finish_c_label">Finish C</string>
    <string name="dialog_close">Close</string>
    <string name="activity_a">Activity A</string>
    <string name="go">Go</string>
    <string name="sharedPreferencesTitle">Key-Value Sets</string>
    <string name="lblSharedPreferences">Shared Preferences</string>
    <string name="lblPreferences">Preferences</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="sharedPreferences_hint">Value to save</string>
    <string name="success">Success!</string>
    <string name="fail">Failed :(</string>
    <string name="title_activity_saving_data">SavingData</string>
    <string name="saving_key_value_title">Key-Value</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saving_files_title">Files</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="is_cache">Cache?</string>
    <string name="file_content">File Content</string>
    <string name="is_public">Public?</string>
    <string name="file_path">File path</string>
    <string name="settings">Settings</string>
    <string name="saving_database_title">Database</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_chooser">Show Chooser?</string>
    <string name="is_internal">Internal?</string>
    <string name="play">Play</string>
    <string name="select_uri">Select URI</string>
    <string name="focus">focus</string>
    <string name="select_stream">select stream</string>
    <string name="stop">Stop</string>
    <string name="is_service">Service?</string>
    <string name="request_permission">Request permission</string>
    <string name="camera_error">Camera error</string>
    <string name="imageview_description">Image Description</string>
    <string name="clear_cache_menu">Clear cache</string>
    <string name="no_network_connection_toast">No network connection</string>
    <string name="clear_cache_complete_toast">Cache cleared</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="animation_duration">Duration: %1$d ms</string>
    <string name="interpolator">Interpolator:</string>
    <string name="interpolate">Interpolate!</string>
    <string name="animate">Animate</string>
    <string name="dummy1">Dummy text one</string>
    <string name="dummy2">Dummy text 2</string>
    <string name="title">Title</string>
    <string name="go_delayed">Go delayed</string>
    <string name="go_custom">Go custom</string>
    <string name="label">Label</string>
    <string name="register">Register</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>
    <string name="connection_error">Unable to load content</string>
    <string name="wifi_connected">Wifi connected</string>
    <string name="lost_connection">Lost connection</string>
    <string name="xml_error">Error parsing xml</string>
    <string name="loading">Loading…</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invlaid Latitude/Longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No Geocoder available</string>
    <!-- Buttons strings -->

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string-array name="interpolator_names">
        <item>Linear</item>
        <item>Fast Out Linear In</item>
        <item>Fast Out Slow In</item>
        <item>Linear Out Slow In</item>
    </string-array>
    <string-array name="network_list_descr">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <string-array name="network_list_ids">
        <item>Wi-Fi</item>
        <item>Any</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_notification_special">NotificationSpecialActivity</string>
    <string name="snooze">Snooze</string>
    <string name="sample_notification_summary_content">You have %d notifications</string>
    <string name="active_notifications">There are %d notifications</string>
    <string name="shortcut_shortcut_short_label1">notification_shortcut_short_label1</string>
    <string name="shortcut_shortcut_long_label1">notification_shortcut_long_label1</string>
    <string name="shortcut_disabled_message1">notification_disabled_message1</string>
    <string name="add_shortcut">Add</string>
    <string name="reset_shortcuts">Reset shortcuts</string>
    <string name="services_fragment_title">Services list</string>
    <string name="processes_fragment_title">Processes list</string>
    <string name="search_hint">Search hint</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="reset_button">Reset</string>

    <string name="authority">com.daemo.myfirstapp.threads</string>
    <string name="settings_location_enable_geofences">location_enable_geofences</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="unfocus">UnFocus</string>
    <string name="start">Start</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="address">Address</string>
    <string name="check_settings">Check settings</string>
    <string name="clear">Clear</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_last_location">Get last location</string>
    <string name="start_location_updates">Start location updates</string>
    <string name="location_updates_started">Location updates started</string>
    <string name="location_updates_enabled">Location updates enabled</string>
    <string name="location_updates_disabled">Location updates disabled</string>
    <string name="googleapi_not_connected">GoogleApiClient is not connected</string>
    <string name="location_is_null">Location is null</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_succeeded">Authentication succeeded</string>
    <string name="new_user">New user</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_in_anonymously">Sign in anonymously</string>
    <string name="write">Write</string>
    <string name="firebase_db_value">Firebase DB value</string>
    <string name="read">Read</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="menu_logout">Log out</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="write_your_post">Write your post…</string>
    <string name="firebase_logo">Firebase logo</string>
    <string name="account_image">Account image</string>
    <string name="NWQuadrant">NWquadrant</string>
    <string name="draggable">Draggable</string>
    <string name="NEQuadrant">NEQuadrant</string>
    <string name="SWQuadrant">SWQuadrant</string>
    <string name="SEQuadrant">SEQuadrant</string>
    <string name="star">Star</string>
    <string name="undo">Undo</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="upload">Upload</string>
    <string name="upload_file">Upload a File</string>
    <string name="link">Link</string>
    <string name="download">Download</string>
    <string name="normal">Normal</string>
    <string name="dialog">Dialog</string>
    <string name="error">Error</string>
    <string name="logging_out">Logging out…</string>
</resources>
