<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_layout"
    android:orientation="vertical"
    tools:context="com.daemo.myfirstapp.graphics.transitions.TransitionsFragment">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@android:id/title"
        android:text="@string/title" />

    <FrameLayout
        android:id="@+id/scene_root"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <include layout="@layout/scene_a" />
    </FrameLayout>

    <Button
        android:text="@string/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />

    <Button
        android:text="@string/go_delayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_delayed" />

    <Button
        android:text="@string/go_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_custom" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scenes_container" />
</LinearLayout>
