<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgStorageMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:onClick="storageModeSelected">

        <RadioButton
            android:id="@+id/rbtnInternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/internal_storage" />

        <RadioButton
            android:id="@+id/rbtnExternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/external_storage" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgStorageMode"
        android:orientation="horizontal"
        android:id="@+id/rlStorageOptions">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlStorageOptions"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnSaveFile"
            android:onClick="save" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:id="@+id/btnLoadFile"
            android:onClick="load" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/file_path"
        android:id="@+id/tvFilePath"
        android:layout_below="@id/linearLayout" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/etFileContent"
        android:layout_below="@+id/tvFilePath"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="start"
        android:hint="@string/file_content" />
</RelativeLayout>