<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_shortcut_short_label1"
        android:shortcutLongLabel="@string/shortcut_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.daemo.myfirstapp"
            android:targetClass="com.daemo.myfirstapp.shortcuts.ShortcutActivity" />
        <!-- If your shortcut is associated with multiple intents, include them here.
             The last intent in the list determines what the user sees when they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>