<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/advertise_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/discover_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discover"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect"
            android:layout_width="0dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status" />

    <TextView
        android:id="@+id/chat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true" />

    <EditText
        android:id="@+id/chatInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>