<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.daemo.myfirstapp.drag_drop.DragDropActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/imageView_draggable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:contentDescription="@string/draggable"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView_draggable"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/NWQuadrant"
                android:layout_weight="1"
                android:contentDescription="@string/NWQuadrant"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/NEQuadrant"
                android:layout_weight="1"
                android:contentDescription="@string/NEQuadrant"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/SWQuadrant"
                android:layout_weight="1"
                android:contentDescription="@string/SWQuadrant"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/SEQuadrant"
                android:layout_weight="1"
                android:contentDescription="@string/SEQuadrant"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
