<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".savingData.SavingKeyValueData">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sharedPreferencesTitle"
        android:id="@+id/textView3"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mode"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSharedPreferences"
                android:id="@+id/rbtnSharedPreferences"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPreferences"
                android:checked="false"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/mode"
            android:id="@+id/saveKeyValue"
            android:baselineAligned="false"
            android:gravity="center">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/etValueToSave"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/sharedPreferences_hint" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btnSaveKeyValue"
                android:onClick="save" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/saveKeyValue"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/btnLoadKeyValue"
                android:onClick="load" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tvValueLoaded"
                android:textAlignment="center"
                android:singleLine="false"
                android:gravity="center" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
