<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daemo.myfirstapp.notification.NotificationActivity">

    <include
        layout="@layout/toolbar"
        android:id="@id/toolbar" />

    <ToggleButton
        android:layout_below="@id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:layout_alignParentStart="true"
        android:textOff="@string/normal"
        android:textOn="@string/dialog"
        android:checked="false" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_toEndOf="@+id/toggleButton"
        android:id="@+id/button"
        android:onClick="issueNotification" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:id="@+id/notification_number" />
</RelativeLayout>
