<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/upload_file"/>

            <Button
                android:id="@+id/button_upload"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/upload"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/link"/>

            <TextView
                android:id="@+id/picture_download_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="http://www.example.com/?id=UAOJNVKBMQUGPYZKCQZRZKJEXRCRXMRSMFBZBMBODWUSVTDXJCPJMYOKQQBODSGPYHPZUR"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/download"/>

            <Button
                android:id="@+id/button_download"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/download"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>